force-app/main/default/objects/Account/fields/ACC_AccueilSecurite__c.field-meta.xml
<CustomField>
    <fullName>ACC_AccueilSecurite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accueil Sécurité</label>
    <type>Checkbox</type>
</CustomField>