force-app/main/default/objects/Account/fields/ACC_AutresInformations__c.field-meta.xml
<CustomField>
    <fullName>ACC_AutresInformations__c</fullName>
    <label>Autres informations</label>
    <type>TextArea</type>
</CustomField>