force-app/main/default/objects/Account/fields/ACC_CategorieClient__c.field-meta.xml
<CustomField>
    <fullName>ACC_CategorieClient__c</fullName>
    <label>Catégorie Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Etranger</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Département outremer</fullName>
            </value>
            <value>
                <fullName>Intracommunautaire</fullName>
            </value>
            <value>
                <fullName>Etablissement secondaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>