force-app/main/default/objects/Account/fields/ACC_Code_SDI__c.field-meta.xml
<CustomField>
    <fullName>ACC_Code_SDI__c</fullName>
    <label>Code SDI</label>
    <length>7</length>
    <type>Text</type>
</CustomField>