force-app/main/default/objects/Account/fields/Acc_CodeAgence__c.field-meta.xml
<CustomField>
    <fullName>Acc_CodeAgence__c</fullName>
    <label>Code Agence Régionale BW</label>
    <length>150</length>
    <type>Text</type>
</CustomField>