force-app/main/default/objects/Account/fields/ACC_CodeBlocage__c.field-meta.xml
<CustomField>
    <fullName>ACC_CodeBlocage__c</fullName>
    <label>Code blocage (FRA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Toutes transactions autorisées</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Les nouvelles commandes sont soumises à autorisation</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Les nouvelles commandes sont à paiement comptant</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Les commandes PT sont autorisées, livraisons sont interdites</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Les commandes et les livraisons sont interdites</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Les livraisons sont interdites</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Toutes les transactions sont interdites</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>