force-app/main/default/objects/Account/fields/ACC_CodeClient__c.field-meta.xml
<CustomField>
    <fullName>ACC_CodeClient__c</fullName>
    <label>Code client</label>
    <length>100</length>
    <type>Text</type>
</CustomField>