force-app/main/default/objects/Account/fields/ACC_CodeNAF__c.field-meta.xml
<CustomField>
    <fullName>ACC_CodeNAF__c</fullName>
    <label>Code NAF</label>
    <length>8</length>
    <type>Text</type>
</CustomField>