force-app/main/default/objects/Account/fields/Acc_CodeSecteur__c.field-meta.xml
<CustomField>
    <fullName>Acc_CodeSecteur__c</fullName>
    <label>Code Secteur Commercial</label>
    <length>150</length>
    <type>Text</type>
</CustomField>