force-app/main/default/objects/Account/fields/ACC_CompteCle__c.field-meta.xml
<CustomField>
    <fullName>ACC_CompteCle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permet de définir si le client est un grand compte</description>
    <label>Compte clé</label>
    <type>Checkbox</type>
</CustomField>