force-app/main/default/objects/Account/fields/ACC_Contrat_Cadre__c.field-meta.xml
<CustomField>
    <fullName>ACC_Contrat_Cadre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrat Cadre</label>
    <type>Checkbox</type>
</CustomField>