force-app/main/default/objects/Account/fields/ACC_Coord_GPS_SHIP_WO__c.field-meta.xml
<CustomField>
    <fullName>ACC_Coord_GPS_SHIP_WO__c</fullName>
    <formula>text( ShippingLatitude ) &amp; &quot;,&quot; &amp; text( ShippingLongitude )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordonnées GPS Livraison/intervention</label>
    <type>Text</type>
</CustomField>