force-app/main/default/objects/Account/fields/ACC_Courrier_electronique_certifie__c.field-meta.xml
<CustomField>
    <fullName>ACC_Courrier_electronique_certifie__c</fullName>
    <label>Courrier électronique certifié</label>
    <type>Email</type>
</CustomField>