force-app/main/default/objects/Account/fields/ACC_Creances__c.field-meta.xml
<CustomField>
    <fullName>ACC_Creances__c</fullName>
    <label>Créances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>