force-app/main/default/objects/Account/fields/ACC_CreancesEchues__c.field-meta.xml
<CustomField>
    <fullName>ACC_CreancesEchues__c</fullName>
    <label>Créances échues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>