force-app/main/default/objects/Account/fields/ACC_CRMId__c.field-meta.xml
<CustomField>
    <fullName>ACC_CRMId__c</fullName>
    <description>Clef d&apos;identification Salesforce unique</description>
    <displayFormat>ACC-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>CRM Id</label>
    <type>AutoNumber</type>
</CustomField>