force-app/main/default/objects/Account/fields/ACC_DATE_LAST_CDE__c.field-meta.xml
<CustomField>
    <fullName>ACC_DATE_LAST_CDE__c</fullName>
    <label>Date de dernière Commande</label>
    <type>Date</type>
</CustomField>