force-app/main/default/objects/Account/fields/ACC_DATE_LAST_OPP__c.field-meta.xml
<CustomField>
    <fullName>ACC_DATE_LAST_OPP__c</fullName>
    <label>Date de dernière Opportunité</label>
    <type>Date</type>
</CustomField>