force-app/main/default/objects/Account/fields/ACC_DelaisDePaiement__c.field-meta.xml
<CustomField>
    <fullName>ACC_DelaisDePaiement__c</fullName>
    <label>Délais de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Comptant</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>8j nets</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>30j nets</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>30j FDM</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>30j FDM le 5</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>30j FDM le 10</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>30j FDM le 15</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>30j FDM le 20</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>45j FDM</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>60j nets</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>90j nets</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>120j FDM</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>120j FDM + 10j</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15j nets</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>60-90j FDM</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>60j FDM + 10j</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>90-120j FDM</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>90j FDM</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>90j FDM + 10j</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>60j FDM</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>30j FDM + 10j</label>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>