force-app/main/default/objects/Account/fields/ACC_EchangeEnAnglais__c.field-meta.xml
<CustomField>
    <fullName>ACC_EchangeEnAnglais__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Echange en Anglais</label>
    <type>Checkbox</type>
</CustomField>