force-app/main/default/objects/Account/fields/ACC_Encours__c.field-meta.xml
<CustomField>
    <fullName>ACC_Encours__c</fullName>
    <label>Encours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>