force-app/main/default/objects/Account/fields/ACC_Entite_BW__c.field-meta.xml
<CustomField>
    <fullName>ACC_Entite_BW__c</fullName>
    <label>Entité BW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EntiteBW</valueSetName>
    </valueSet>
</CustomField>