force-app/main/default/objects/Account/fields/ACC_ERPIdITA__c.field-meta.xml
<CustomField>
    <fullName>ACC_ERPIdITA__c</fullName>
    <externalId>true</externalId>
    <label>ERP Id ITA</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>