force-app/main/default/objects/Account/fields/ACC_ERPIdNLD__c.field-meta.xml
<CustomField>
    <fullName>ACC_ERPIdNLD__c</fullName>
    <externalId>true</externalId>
    <label>ERP Id NLD</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>