force-app/main/default/objects/Account/fields/ACC_ERPIdPRT__c.field-meta.xml
<CustomField>
    <fullName>ACC_ERPIdPRT__c</fullName>
    <externalId>true</externalId>
    <label>ERP Id PRT</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>