force-app/main/default/objects/Account/fields/ACC_EtatDuCompte__c.field-meta.xml
<CustomField>
    <fullName>ACC_EtatDuCompte__c</fullName>
    <label>Etat du compte (ITA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Blocage financier</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Liquidation - Fusion</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Fiche incomplète</label>
            </value>
            <value>
                <fullName>Fusion de sociétés</fullName>
                <isActive>false</isActive>
                <label>Fusion de sociétés</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>