force-app/main/default/objects/Account/fields/ACC_Langue_Documentation__c.field-meta.xml
<CustomField>
    <fullName>ACC_Langue_Documentation__c</fullName>
    <label>Langue de Documentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Anglais</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Français</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Allemand</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Italien</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Espagnol</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>