force-app/main/default/objects/Account/fields/ACC_LegalAddress_City__c.field-meta.xml
<CustomField>
    <fullName>ACC_LegalAddress_City__c</fullName>
    <label>Ville</label>
    <length>50</length>
    <type>Text</type>
</CustomField>