force-app/main/default/objects/Account/fields/ACC_LegalAddress_Country__c.field-meta.xml
<CustomField>
    <fullName>ACC_LegalAddress_Country__c</fullName>
    <label>Pays</label>
    <length>50</length>
    <type>Text</type>
</CustomField>