force-app/main/default/objects/Account/fields/ACC_LegalAddress_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>ACC_LegalAddress_PostalCode__c</fullName>
    <label>Code Postal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>