force-app/main/default/objects/Account/fields/ACC_LegalAddress_Rue__c.field-meta.xml
<CustomField>
    <fullName>ACC_LegalAddress_Rue__c</fullName>
    <label>Rue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>