force-app/main/default/objects/Account/fields/ACC_LimitationDeCredit__c.field-meta.xml
<CustomField>
    <fullName>ACC_LimitationDeCredit__c</fullName>
    <label>Limitation de crédit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>