force-app/main/default/objects/Account/fields/ACC_ModeDePaiement__c.field-meta.xml
<CustomField>
    <fullName>ACC_ModeDePaiement__c</fullName>
    <label>Mode de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>6</fullName>
                <label>BOR</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>CAD</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>Carte Bancaire</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Chèque</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>Cheques</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Contre Doc</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Crédit Doc</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>Espèces</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>LCR</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Prélèvement</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Virement Bancaire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>