force-app/main/default/objects/Account/fields/ACC_NatureDuCompte__c.field-meta.xml
<CustomField>
    <fullName>ACC_NatureDuCompte__c</fullName>
    <label>Nature du compte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration publique</fullName>
            </value>
            <value>
                <fullName>SARL société à responsabilité limitée</fullName>
            </value>
            <value>
                <fullName>EURL entreprise unipersonnelle à responsabilité limitée</fullName>
            </value>
            <value>
                <fullName>SELARL société d&apos;exercice libéral à responsabilité limitée</fullName>
            </value>
            <value>
                <fullName>SA société anonyme</fullName>
            </value>
            <value>
                <fullName>SAS société par actions simplifiée</fullName>
            </value>
            <value>
                <fullName>SASU société par actions simplifiée unipersonnelle</fullName>
            </value>
            <value>
                <fullName>SCP société civile professionnelle</fullName>
            </value>
            <value>
                <fullName>SNC société en nom collectif</fullName>
            </value>
            <value>
                <fullName>Particulier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>