force-app/main/default/objects/Account/fields/ACC_NombreDEmployes__c.field-meta.xml
<CustomField>
    <fullName>ACC_NombreDEmployes__c</fullName>
    <label>Nombre d&apos;employés</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-50</fullName>
            </value>
            <value>
                <fullName>51-250</fullName>
            </value>
            <value>
                <fullName>251-500</fullName>
            </value>
            <value>
                <fullName>501-1500</fullName>
            </value>
            <value>
                <fullName>+ 1500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>