force-app/main/default/objects/Account/fields/ACC_NoteDeCredit__c.field-meta.xml
<CustomField>
    <fullName>ACC_NoteDeCredit__c</fullName>
    <label>Note de crédit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>