force-app/main/default/objects/Account/fields/ACC_NTVAIntracommunautaire__c.field-meta.xml
<CustomField>
    <fullName>ACC_NTVAIntracommunautaire__c</fullName>
    <description>Le numéro de tva intracommunautaire du client</description>
    <label>N° TVA Intracommunautaire</label>
    <length>15</length>
    <type>Text</type>
</CustomField>