force-app/main/default/objects/Account/fields/ACC_Payeur__c.field-meta.xml
<CustomField>
    <fullName>ACC_Payeur__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indique que le compte est un compte Payeur</description>
    <inlineHelpText>Indique que le compte est un compte Payeur</inlineHelpText>
    <label>Payeur</label>
    <type>Checkbox</type>
</CustomField>