force-app/main/default/objects/Account/fields/ACC_PositionHierarchique__c.field-meta.xml
<CustomField>
    <fullName>ACC_PositionHierarchique__c</fullName>
    <label>Position hiérarchique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Groupe</fullName>
            </value>
            <value>
                <fullName>Filiale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>