force-app/main/default/objects/Account/fields/ACC_RattachementHierarchique__c.field-meta.xml
<CustomField>
    <fullName>ACC_RattachementHierarchique__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cette case à cocher permet d&apos;indiquer que le Compte est rattaché à des comptes enfants.</description>
    <inlineHelpText>Cette case à cocher permet d&apos;indiquer que le Compte est rattaché à des comptes enfants.</inlineHelpText>
    <label>Rattachement hierarchique</label>
    <type>Checkbox</type>
</CustomField>