force-app/main/default/objects/Account/fields/ACC_Region__c.field-meta.xml
<CustomField>
    <fullName>ACC_Region__c</fullName>
    <label>Agence régionale BW</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ACC_Entite_BW__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>AgenceRegionaleBW</valueSetName>
    </valueSet>
</CustomField>