force-app/main/default/objects/Account/fields/ACC_RemiseChauffage__c.field-meta.xml
<CustomField>
    <fullName>ACC_RemiseChauffage__c</fullName>
    <label>Remise chauffage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>