force-app/main/default/objects/Account/fields/ACC_RemiseClient__c.field-meta.xml
<CustomField>
    <fullName>ACC_RemiseClient__c</fullName>
    <label>Remise client</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>