force-app/main/default/objects/Account/fields/ACC_RemisePieces__c.field-meta.xml
<CustomField>
    <fullName>ACC_RemisePieces__c</fullName>
    <label>Remise pièces</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>