force-app/main/default/objects/Account/fields/ACC_RemiseTraitementDeLEau__c.field-meta.xml
<CustomField>
    <fullName>ACC_RemiseTraitementDeLEau__c</fullName>
    <label>Remises produits de conditionnement</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>