force-app/main/default/objects/Account/fields/ACC_RemiseTraitementEauStandard__c.field-meta.xml
<CustomField>
    <fullName>ACC_RemiseTraitementEauStandard__c</fullName>
    <inlineHelpText>Remise matériel traitement de l&apos;eau standard</inlineHelpText>
    <label>Remise matériel traitement de l&apos;eau std</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>