force-app/main/default/objects/Account/fields/ACC_ResponsableSecteur2__c.field-meta.xml
<CustomField>
    <fullName>ACC_ResponsableSecteur2__c</fullName>
    <label>Responsable Secteur</label>
    <length>100</length>
    <type>Text</type>
</CustomField>