force-app/main/default/objects/Account/fields/ACC_ResponsableSecteur__c.field-meta.xml
<CustomField>
    <fullName>ACC_ResponsableSecteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Secteur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>