force-app/main/default/objects/Account/fields/ACC_revenu_n_2__c.field-meta.xml
<CustomField>
    <fullName>ACC_revenu_n_2__c</fullName>
    <label>Revenu n-2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>