force-app/main/default/objects/Account/fields/ACC_Revenu_n__c.field-meta.xml
<CustomField>
    <fullName>ACC_Revenu_n__c</fullName>
    <label>Revenu n</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>