force-app/main/default/objects/Account/fields/ACC_SecteurCommercial__c.field-meta.xml
<CustomField>
    <fullName>ACC_SecteurCommercial__c</fullName>
    <label>Secteur commercial</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ACC_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SecteurCommercial</valueSetName>
    </valueSet>
</CustomField>