force-app/main/default/objects/Account/fields/ACC_SIREN__c.field-meta.xml
<CustomField>
    <fullName>ACC_SIREN__c</fullName>
    <label>SIREN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>