force-app/main/default/objects/Account/fields/ACC_Siret__c.field-meta.xml
<CustomField>
    <fullName>ACC_Siret__c</fullName>
    <description>Permet de renseigner le siret de l&apos;entreprise</description>
    <label>SIRET</label>
    <length>14</length>
    <type>Text</type>
</CustomField>