force-app/main/default/objects/Account/fields/ACC_SiteSEVESO__c.field-meta.xml
<CustomField>
    <fullName>ACC_SiteSEVESO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site SEVESO</label>
    <type>Checkbox</type>
</CustomField>