force-app/main/default/objects/Account/fields/ACC_Solvabilite__c.field-meta.xml
<CustomField>
    <fullName>ACC_Solvabilite__c</fullName>
    <formula>IF(  ACC_Creances__c   &lt;  ACC_LimitationDeCredit__c,IMAGE(&quot;/resource/IconeSolvabiliteVert&quot;, &quot;green&quot;, 30, 30),
IF(  ACC_Creances__c   &gt;  ACC_LimitationDeCredit__c,IMAGE(&quot;/resource/IconeSolvabiliteRouge&quot;, &quot;red&quot;, 30, 30),
IMAGE(&quot;/resource/IconeSolvabiliteInconnue&quot;, &quot;black&quot;, 30, 30)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solvabilité</label>
    <type>Text</type>
</CustomField>