force-app/main/default/objects/Account/fields/ACC_Status_Gold__c.field-meta.xml
<CustomField>
    <fullName>ACC_Status_Gold__c</fullName>
    <formula>iF(   ACC_Revenu_n__c   &lt;= 15000 ,  ACC_Revenu_n__c  / 15000, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>