force-app/main/default/objects/Account/fields/ACC_Status_Ivory__c.field-meta.xml
<CustomField>
    <fullName>ACC_Status_Ivory__c</fullName>
    <formula>iF(   ACC_Revenu_n__c   &gt; 0, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ivory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>