force-app/main/default/objects/Account/fields/ACC_Status_Silver__c.field-meta.xml
<CustomField>
    <fullName>ACC_Status_Silver__c</fullName>
    <formula>IF( ACC_Revenu_n__c  &lt;=  5000 ,  ACC_Revenu_n__c   / 5000, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Silver</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>