force-app/main/default/objects/Account/fields/ACC_Statut_Client__c.field-meta.xml
<CustomField>
    <fullName>ACC_Statut_Client__c</fullName>
    <formula>IF( ACC_revenu_n_1__c &lt;= 5000, &quot;Ivory&quot;   , 
    IF( ACC_revenu_n_1__c &lt;= 15000, &quot;Silver&quot; , 
        IF( ACC_revenu_n_1__c &lt;= 30000, &quot;Gold&quot;   , &quot;Platinum&quot;)
      )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Client Actuel (Revenu N-1)</label>
    <type>Text</type>
</CustomField>