force-app/main/default/objects/Account/fields/ACC_TechnicienSuppleant__c.field-meta.xml
<CustomField>
    <fullName>ACC_TechnicienSuppleant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technicien suppléant</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Accounts (Technicien suppléant)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>