force-app/main/default/objects/Account/fields/ACC_TerritoireDeService__c.field-meta.xml
<CustomField>
    <fullName>ACC_TerritoireDeService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territoire de service</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Les territoires d&apos;astreinte ne sont pas autorisés lors la création ou la modification d&apos;un compte</errorMessage>
        <filterItems>
            <field>ServiceTerritory.Territoire_d_astreinte__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Comptes</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>