force-app/main/default/objects/Account/fields/ACC_Type_Client_SDI__c.field-meta.xml
<CustomField>
    <fullName>ACC_Type_Client_SDI__c</fullName>
    <label>Type Client SDI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Compagnie</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Administration publique</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>