force-app/main/default/objects/Account/fields/ACC_TypologieClient__c.field-meta.xml
<CustomField>
    <fullName>ACC_TypologieClient__c</fullName>
    <description>Ce champ permet de définir la typologie client</description>
    <label>Typologie client</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T5</fullName>
                <label>Exploitant</label>
            </value>
            <value>
                <fullName>T1</fullName>
                <label>Utilisateur final</label>
            </value>
            <value>
                <fullName>T2</fullName>
                <label>OEM</label>
            </value>
            <value>
                <fullName>T3</fullName>
                <label>Engineering</label>
            </value>
            <value>
                <fullName>T4</fullName>
                <label>Installateur</label>
            </value>
            <value>
                <fullName>Commandeur</fullName>
                <isActive>false</isActive>
                <label>Commandeur</label>
            </value>
            <value>
                <fullName>Installé</fullName>
                <isActive>false</isActive>
                <label>Installé</label>
            </value>
            <value>
                <fullName>Payeur</fullName>
                <isActive>false</isActive>
                <label>Payeur</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>