force-app/main/default/objects/Account/fields/Compte_Payeur__c.field-meta.xml
<CustomField>
    <fullName>Compte_Payeur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ce champ permet d&apos;indiquer le compte Payeur si celui ci est différent du compte principal. 
Ce champ est mis a jour par interface depuis GPIC</description>
    <inlineHelpText>Ce champ indique le compte payeur si celui-ci est différent du compte principal</inlineHelpText>
    <label>Compte Payeur</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.ACC_Payeur__c</field>
            <operation>equals</operation>
            <value>&quot;TRUE&quot;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comptes</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>